# RatiOS

./: CMakeLists.txt  README.md  package.xml
include/: deliberative_executor.h  deliberative_manager.h
msg/: Flaw.msg  Graph.msg  Resolver.msg  Timelines.msg
src/: deliberative_executor.cpp  deliberative_manager.cpp  main.cpp
srv/: StateProvider.srv
