<?xml version="1.0"?>
<package format="2">
  <name>deliberative_tier</name>
  <version>1.0.0</version>
  <description>A ROS package for interacting with oRatio</description>
  <maintainer email="riccardo.debenedictis@istc.cnr.it">Riccardo De Benedictis</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslaunch</build_depend>
  <exec_depend>roscpp</exec_depend>
  <depend>aerials</depend>
</package>
